--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
 Flask==2.3.3
+flask-cors==4.0.0
 gunicorn==21.2.0
+
 pandas==2.2.1
 numpy==1.26.4
 scikit-learn==1.4.2
+scipy==1.15.3
+
+python-dateutil==2.9.0.post0
+threadpoolctl==3.6.0
+joblib==1.5.1
+packaging==25.0
+pytz==2025.2
+tzdata==2025.2
+six==1.17.0
